@@ -62,6 +62,15 @@ A009	7_09_BB	224	97	159	160	133	156	126	119	147	227	261	134
 A006	7_09_BB	224	97	159	160	133	156	126	119	147	235	261	134
 A013	7_09_BB	224	97	163	160	133	156	126	119	147	235	257	134"
 
+bad_genalex <- "1	6	1	6
+Ind	Pop	CHMFc4	
+A004	7_09_BB	224	 
+A002	7_09_BB	224	 
+A011	7_09_BB	224	 
+A009	7_09_BB	224	 
+A006	7_09_BB	224	 
+A013	7_09_BB	224	 "
+
 test_that("basic text connections work", {
 	gen <- read.genalex(textConnection(y), sep = "\t")
 	expect_equivalent(tab(gen), tab(monpop[1:6, drop = TRUE]))
@@ -113,6 +122,17 @@ Ind,Pop,RM127, ,RM22, ,RM22, ,RM127,
 4,Admix,230,230,200,200,195,195,130,130
 5,Admix,210,230,200,200,200,200,120,120"
   expect_warning(read.genalex(textConnection(f)), "col 7: RM22 -> RM22_1")
+})
+
+test_that("improperly-formatted data causes an error", {
+  skip_on_cran()
+  msg <- "^.+?6 individuals.+?5 rows.+?Please inspect "
+  tcmsg  <- paste0(msg, "textConnection\\(bad_genalex\\).+?$")
+  expect_error(read.genalex(textConnection(bad_genalex), sep = "\t"), tcmsg)
+  f <- tempfile()
+  writeLines(bad_genalex, f)
+  fmsg <- paste0(msg, f, ".+?$")
+  expect_error(read.genalex(f, sep = "\t"), fmsg)
 })
 
 context("Data export tests")
